--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 		<div class="content">
 			<h4>Sup, You know my name if u don't know my name is</h4>
-			<h1>PUPUL OR WGNMKITYLS</h1>
+			<h1>PUPUL</h1>
                         <h4>You can call me what ever you want</h4>
 			<h1>So Basicly</h1>
                         <h3>I'am a Music Producer ,
